--- a/index.html
+++ b/index.html
@@ -30,5 +30,24 @@
                 </svg>
             </button>
         </header>
+        <!-- main -->
+        <main id="main">
+            <!-- hero image -->
+            <img id="main-heroImg" src="./assets/fitness-jump-hero.svg" alt="Fitness woman jumping">
+            <!-- banner section -->
+            <section id="main-bannerSection">
+                <!-- title section -->
+                <h1 id="main-bannerSection-title">Exclusive <b id="main-bannerSection-blueBold">trains</b> for you!</h1>
+                <!-- paragraph section -->
+                <p id="main-bannerSection-paragraph">We create <b>exclusive and unique</b> trains for you. Invest in your body and have much more <b>performance and quality</b> of life.</p>
+                <!-- link section -->
+                <a href="#" id="main-bannerSection-link" title="Contact us">
+                    <svg id="main-bannerSection-link-icon" xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21" fill="none">
+                        <path d="M15.1 13C14.9 12.9 13.6 12.3 13.4 12.2C13.2 12.1 13 12.1 12.8 12.3C12.6 12.5 12.2 13.1 12 13.3C11.9 13.5 11.7 13.5 11.5 13.4C10.8 13.1 10.1 12.7 9.5 12.2C9 11.7 8.5 11.1 8.1 10.5C8 10.3 8.1 10.1 8.2 10C8.3 9.90001 8.4 9.70001 8.6 9.60001C8.7 9.50001 8.8 9.30001 8.8 9.20001C8.9 9.10001 8.9 8.90001 8.8 8.80001C8.7 8.70001 8.2 7.50001 8 7.00001C7.9 6.30001 7.7 6.30001 7.5 6.30001C7.4 6.30001 7.2 6.30001 7 6.30001C6.8 6.30001 6.5 6.50001 6.4 6.60001C5.8 7.20001 5.5 7.90001 5.5 8.70001C5.6 9.60001 5.9 10.5 6.5 11.3C7.6 12.9 9 14.2 10.7 15C11.2 15.2 11.6 15.4 12.1 15.5C12.6 15.7 13.1 15.7 13.7 15.6C14.4 15.5 15 15 15.4 14.4C15.6 14 15.6 13.6 15.5 13.2C15.5 13.2 15.3 13.1 15.1 13ZM17.6 3.90001C13.7 6.19888e-06 7.4 6.19888e-06 3.5 3.90001C0.3 7.10001 -0.3 12 1.9 15.9L0.5 21L5.8 19.6C7.3 20.4 8.9 20.8 10.5 20.8C16 20.8 20.4 16.4 20.4 10.9C20.5 8.30001 19.4 5.80001 17.6 3.90001ZM14.9 17.9C13.6 18.7 12.1 19.2 10.5 19.2C9 19.2 7.6 18.8 6.3 18.1L6 17.9L2.9 18.7L3.7 15.7L3.5 15.4C1.1 11.4 2.3 6.40001 6.2 3.90001C10.1 1.40001 15.1 2.70001 17.5 6.50001C19.9 10.4 18.8 15.5 14.9 17.9Z" fill="#F9F9F9"/>
+                    </svg>
+                    <p id="main-bannerSection-text">Start now!</p>
+                </a>
+            </section>
+        </main>
     </body>
 </html>
