--- a/index.html
+++ b/index.html
@@ -49,5 +49,9 @@
                 </a>
             </section>
         </main>
+        <!-- footer -->
+        <footer id="footer">
+            <p id="footer-text">talk to us on instagram <b>@treine.me</b></p>
+        </footer>
     </body>
 </html>
