Wrap logo inside div

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <!-- header -->
         <header id="header">
             <!-- logo -->
-            <a href="#" id="header-logo" title="Home">train.me</a>
+            <div id="header-logoContainer">
+                <a href="#" id="header-logo" title="Home">train.me</a>
+            </div>
             <!-- menu -->
             <button id="header-menuBtn" title="Open menu">
                 <!-- open menu -->
